src/rules/flake8_bandit/snapshots/ruff__rules__flake8_bandit__tests__S110_S110.py.snap
---
source: src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    TryExceptPass: ~
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 8
  fix: ~
  parent: ~
- kind:
    TryExceptPass: ~
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 8
  fix: ~
  parent: ~

